# posterchild

./: LICENSE  README.markdown  posterchild.cabal  run-devel.hs  run-devel.sh
cli/: Main.hs  SQL.hs
docs/: ideas.markdown
src/Data/: HList.hs
src/Database/: Posterchild.hs
src/Database/Posterchild/: AST.hs  Parser.hs  SchemaConstraints.hs  Syntax.hs  TH.hs  TyCheck.hs
src/Database/Posterchild/Driver/: Class.hs  HDBC.hs
src/Database/Posterchild/Parser/: Common.hs  Expr.hs  Select.hs
src/Database/Posterchild/Syntax/: Abstract.hs  Common.hs  Schema.hs  Select.hs  SqlTy.hs
test/: Spec.hs
test-src/: .gitignore  hdbc-query.hs  simple-select.dyn_hi  simple-select.dyn_o  simple-select.hi  simple-select.hs
test/Database/Posterchild/Tests/: TH.hs  TyCheck.hs  Util.hs
