cabal-version:      3.0
name:               posterchild
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Tobias Dammers
maintainer:         tdammers@gmail.com
-- copyright:
category:           Database
build-type:         Simple
-- extra-doc-files:
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules: Database.Posterchild
                   , Database.Posterchild.TyCheck
                   , Database.Posterchild.Syntax.Abstract
                   , Database.Posterchild.Syntax.SqlTy
                   , Database.Posterchild.Parser
                   , Database.Posterchild.Parser.Common
                   , Database.Posterchild.Parser.Select
                   , Database.Posterchild.Parser.Expr
                   , Database.Posterchild.TH
                   , Database.Posterchild.SchemaConstraints
    -- other-modules:
    -- other-extensions:
    build-depends: base ^>=4.17.0.0
                 , bitarray >=0.0.1.1 && <0.1
                 , bytestring >=0.11 && <0.12
                 , case-insensitive >=1.2.1.0 && <1.3
                 , containers >=0.6 && <0.7
                 , Decimal >=0.5.2 && <0.6
                 , megaparsec >=9.3.0 && <9.4
                 , mtl >=2.3.1 && <2.4
                 , template-haskell >=2.19.0 && <2.20
                 , text >=2.0 && <2.1
                 , time >=1.12 && <1.14
                 , vector >=0.13 && <0.14
    hs-source-dirs:   src
    default-language: Haskell2010

executable posterchild
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends: base ^>=4.17.0.0
        , posterchild
        , containers >=0.6 && <0.7
        , vector >=0.13 && <0.14
        , template-haskell >=2.19.0 && <2.20

    hs-source-dirs:   cli
    default-language: Haskell2010
