cabal-version:      3.0
name:               posterchild
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Tobias Dammers
maintainer:         tdammers@gmail.com
-- copyright:
category:           Database
build-type:         Simple
-- extra-doc-files:
extra-source-files: test-src/*.hs

common warnings
    ghc-options: -Wall

common depends
    build-depends: base ^>=4.17.0.0
                 , text >=2.0 && <2.1

library
    import: warnings
          , depends
    exposed-modules: Database.Posterchild
                   , Database.Posterchild.TyCheck
                   , Database.Posterchild.Driver.Class
                   , Database.Posterchild.Driver.HDBC
                   , Database.Posterchild.Syntax
                   , Database.Posterchild.Syntax.Common
                   , Database.Posterchild.Syntax.Select
                   , Database.Posterchild.Syntax.SqlTy
                   , Database.Posterchild.Syntax.Schema
                   , Database.Posterchild.Parser
                   , Database.Posterchild.TH
                   , Database.Posterchild.SchemaConstraints
                   , Data.HList
    -- other-modules:
    -- other-extensions:
    build-depends: bitarray >=0.0.1.1 && <0.1
                 , bytestring >=0.11 && <0.12
                 , case-insensitive >=1.2.1.0 && <1.3
                 , casing >=0.1.4.1 && <0.2
                 , containers >=0.6 && <0.7
                 , Decimal >=0.5.2 && <0.6
                 , HDBC >=2.4.0.4 && <2.5
                 , HDBC-postgresql >=2.5.0.1 && <2.6
                 , lift-type >=0.1.1.1 && <0.2
                 , megaparsec >=9.3.0 && <9.4
                 , mtl >=2.3.1 && <2.4
                 , postgresql-syntax >=0.4.1 && <0.5
                 , template-haskell >=2.19.0 && <2.20
                 , time >=1.12 && <1.14
                 , vector >=0.13 && <0.14
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite posterchild-tests
    import: depends
    type: exitcode-stdio-1.0
    default-language: Haskell2010
    hs-source-dirs: test
    main-is: Spec.hs
    other-modules: Database.Posterchild.Tests.TyCheck
                 , Database.Posterchild.Tests.TH
                 , Database.Posterchild.Tests.Util
    build-depends: posterchild
                 , tasty >=1.4.3 && <1.5
                 , tasty-hunit >=0.10.0.3 && <0.11
                 , tasty-quickcheck >=0.10.2 && <0.11
                 , process >=1.6.17.0 && <1.7

executable posterchild
    import: warnings
          , depends
    main-is:          Main.hs
    other-modules: SQL
    -- other-extensions:
    build-depends: base ^>=4.17.0.0
                 , posterchild
                 , containers >=0.6 && <0.7
                 , vector >=0.13 && <0.14
                 , template-haskell >=2.19.0 && <2.20
                 , HDBC >=2.4.0.4 && <2.5
                 , HDBC-postgresql >=2.5.0.1 && <2.6

    hs-source-dirs:   cli
    default-language: Haskell2010
